# backend_service_user_account

./: .dockerignore  .gitignore  .pre-commit-config.yaml  config.py  docker-compose.yaml  env  file_test_coverage.sh  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
app/: __init__.py  constants.py  consumer.py  enums.py  producer.py
app/controllers/: __init__.py  resource_controller.py  role_controller.py  sample_controller.py  user_controller.py
app/core/: log.py
app/event/: event_notification_handler.py  event_subscription_handler.py
app/models/: __init__.py  permission_model.py  resource_model.py  role_model.py  role_permission_model.py  sample_model.py  user_model.py  user_otp_model.py  user_role_model.py
app/notifications/: email_notification_handler.py  sms_notification_handler.py
app/repositories/: __init__.py  permission_repository.py  resource_repository.py  role_permission_repository.py  role_repository.py  sample_repository.py  user_otp_repository.py  user_role_repository.py
app/schema/: __init__.py  resource_schema.py  role_schema.py  sample_schema.py  user_schema.py
app/services/: __init__.py  keycloak_service.py
app/utils/: __init__.py  auth.py  encoders.py
migrations/versions/: 00194f4238b2_role_model_initial_migration.py  26dd3487be78_user_role_model_initial_migration.py  36a0ae16c788_user_model_initial_migration.py  55fe796eaab8_user_model_modify_constraints.py  634c2969cd54_permission_model_initial_migration.py  6910b7845d2c_user_otp_model_initial_migration.py  (+3 more)
tests/: base_test_case.py  test_migration_scripts.py
(+40 files in other folders)
