[tool.poetry]
name = "nova-fastapi-microservice"
version = "0.1.0"
description = "design template for building microservice using fastapi"
authors = ["Michael Asumadu <masumadu@archsolutions.online>"]
readme = "README.md"
packages = [{include = "nova_fastapi_microservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
pre-commit = "^3.2.2"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
pinject = "^0.14.1"
pyjwt = "^2.6.0"
redis = "^4.5.4"
kafka-python = "^2.0.2"
alembic = "^1.10.3"
gunicorn = "^20.1.0"
loguru = "^0.7.0"
fastapi-pagination = "^0.12.2"
blinker = "^1.6.2"
faker = "^18.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^41.0.1"
pytz = "^2023.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.0"
coverage = "^7.2.3"
fakeredis = "^2.10.3"
pytest-mock = "^3.10.0"
safety = "^2.3.5"

[tool.black]
line-length = 89
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(/(
    \.git
  | \.hg
  | \.eggs
  | \.ini
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .yml
  | .yaml
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
